src/test/ui/issues/40000-49999/issue-40000.nll.stderr
error: higher-ranked subtype error
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^

error: aborting due to previous error

